# Dhruva-ProductMannager

./: GEMINI.md
Product/: database_schema.md  example_project.json  idea.txt  spec.md  sql_db.sql
deliverables/: README.md
server/: .env.example  .gitignore  pyproject.toml
server/app/: main.py  models.py  schema.py
server/app/agents/: __init__.py  backEndLLM.py  chatAgentLLM.py  featureBreakdownLLM.py  milestonesLLM.py  roadmap.py  roadmapLLM.py  systemDesignLLM.py  tasksLLM.py
server/app/core/: config.py  security.py
server/app/models/: __init__.py  feature.py  milestone.py  milestoneplan.py  project.py  projectuml.py  roadmap.py  taskassignment.py  tech_stack.py  user.py  userproject.py
server/app/routes/: __init__.py  chat.py  company.py  features.py  milestones.py  plan.py  project_milestones.py  project_uml.py  projects.py  roadmap.py  root.py  system_design.py  task_assignments.py  tasks.py  tech_stack.py  user.py  user_project.py
server/app/useage/: auth_service.py
server/parse_requirments/: roadmap.py
server/productmanager_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/tests/: conftest.py  test_chat.py  test_features.py  test_milestones.py  test_plan.py  test_roadmap.py  test_system_design.py  test_tasks.py
web/: package.json  pnpm-lock.yaml
web/src/: App.tsx  index.css
web/src/Api/: auth.ts  chat.ts  features.ts  llm.ts  milestones.ts  projects.ts  systemDesign.ts  tasks.ts  user.ts
web/src/UI/: README.md
web/src/components/: AddFeatureDialog.tsx  AddMilestoneDialog.tsx  AddNodeDialog.tsx  AddRelationshipDialog.tsx  AssignFeatureTaskDialog.tsx  Button.tsx  ChatBubble.tsx  EditProjectDialog.tsx  FormInput.tsx  Header.tsx  LLMSuggestionDialog.tsx  MilestoneFeatures.tsx  MilestoneItem.tsx  MilestonesDisplay.tsx  MilestonesDropdown.tsx  ProductCard.tsx  ProjectFeatures.tsx  StatusSlider.tsx  TaskCreateFormDialog.tsx  TaskItem.tsx  UmlComponent.tsx  UserSearchInput.tsx  button.css  forminput.css
web/src/layout/: ProjectOverviewLayout.tsx  RootLayout.tsx  rootlayout.css
web/src/pages/: AddProject.tsx  Landing.tsx  Login.tsx  Products.tsx  Profile.tsx  ProjectOverview.tsx  Tasks.tsx  login.css
